--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	//Test dependencies
+	testCompile ('junit:junit:4.12')
 }
